# pybooking

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  grafana-dashbord.json  prometheus.yml  pyproject.toml  pytest.ini
docker/: celery.sh  run.sh
src/: conftest.py  constants.py  database.py  exceptions.py  logger.py  main.py  routers.py  schemas.py
src/admin/: auth.py  views.py
src/bookings/: db.py  models.py  router.py  schemas.py
src/db/: base.py
src/geo/: db.py  models.py  router.py  schemas.py  service.py
src/hotels/: db.py  models.py  router.py  schemas.py  service.py  utils.py
src/hotels/rooms/: db.py  models.py  router.py  schemas.py
src/migration/: migration.dump  pybooking.sql
src/migration/versions/: 4ca6a5c35112_initial.py
src/migrations/: env.py
src/migrations/versions/: 1ab636fa4cc5_add_column_images.py  2130b60cde2f_add_room_images.py  23543e8a4ed8_location_is_optional.py  4d843b928465_del_room_image_id.py  73500fbaacd4_inital_commit.py  9db87f144afb_change_column_images_json.py  b70b6926f3fa_add_column_images.py  c2f6c6785761_fix_hotels_min_price.py  f18718391a84_change_column_images.py  f906afcb977e_add_hotels_column.py
src/pages/: router.py
src/s3/: client.py
src/static/css/: base.css  main.css  search.css  style.css
src/static/js/: base.js  main.js  map.js  search.js
src/tasks/: celery_app.py  email_templates.py  mail.py  tasks.py
src/templates/: base.html  main.html  search.html
src/templates/mail_templates/: _styles.html  base.html  booking_confirmation.html
src/tests/: conftest.py  gen_data.py
src/tests/api/: test_bookings_api.py  test_users_api.py
src/tests/unit/: test_bookings_db.py  test_users_db.py
src/users/: auth.py  db.py  dependencies.py  models.py  router.py  schemas.py
