[tool.poetry]
name = "PyBooking"
version = "0.1.0"
description = "Монолитный сервис бронирования отелей на FastApi."
authors = ["justyfay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
setuptools = "^69.0.3"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
greenlet = "^3.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
loguru = "^0.7.2"
anytree = "^2.12.1"
python-dateutil = "^2.8.2"
arel = "^0.3.0"
jinja2 = "^3.1.3"
requests = "^2.31.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.6"
flower = "^2.0.1"
sqladmin = "^0.16.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
faker = "^24.9.0"
python-json-logger = "^2.0.7"
coloredlogs = "^15.0.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.45.0"}
gunicorn = "^22.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
